# sigstore-verification

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mise.toml
.cargo/: audit.toml
.github/workflows/: release-plz.yml  test.yml
examples/: key_verification.rs  rekor_verification.rs  verify_with_key.rs
scripts/: verify-no-openssl.sh
src/: api.rs  bundle.rs  lib.rs  verify.rs
src/sources/: file.rs  github.rs  mod.rs  oci.rs
src/verifiers/: cosign.rs  github.rs  mod.rs  slsa.rs
test-bundles/: v2.6.1-keyless-pem.pem  v2.6.1-keyless-sig.sig  v3.0.2-bundle.json
tests/: attestation_client_builder.rs  cosign_key_verification.rs  github_source_base_url.rs  verify_github_attestation_base_url.rs
