[package]
name = "sigstore-verification"
version = "0.1.0"
edition = "2024"
authors = ["Jeff Dickey (@jdx)"]
license = "MIT"
description = "Sigstore, Cosign, and SLSA attestation verification library"
rust-version = "1.85"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
log = "0.4"
x509-parser = "0.18"

# Cryptographic verification
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2", features = ["pem"] }
signature = "2"

# Sigstore dependencies for verification
sigstore = { version = "0.12", features = ["bundle", "sigstore-trust-root", "cosign", "rekor", "fulcio", "cert"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"
