[package]
name = "sigstore-verification"
version = "0.1.4"
edition = "2024"
authors = ["Jeff Dickey (@jdx)"]
license = "MIT"
description = "Sigstore, Cosign, and SLSA attestation verification library"
repository = "https://github.com/jdx/sigstore-verification"
homepage = "https://github.com/jdx/sigstore-verification"
documentation = "https://docs.rs/sigstore-verification"
rust-version = "1.85"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
log = "0.4"
x509-parser = "0.18"

# Cryptographic verification
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2", features = ["pem"] }
signature = "2"

# Sigstore dependencies for verification
sigstore = { version = "0.12", default-features = false, features = ["bundle", "sigstore-trust-root", "cosign", "rekor", "fulcio", "cert"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"

[features]
default = ["native-tls"]

# TLS backend features - choose one
native-tls = [
    "reqwest/native-tls",
    "sigstore/native-tls",
]
rustls = [
    "reqwest/rustls-tls",
    "sigstore/rustls-tls",
]
rustls-native-roots = [
    "reqwest/rustls-tls-native-roots",
    "sigstore/rustls-tls-native-roots",
]
